# .github

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 1_FeatureRequest.yml  1a_FeatureRequest.yml  1b_ComponentenRequest.yml  2_ProductIncrement.yml  3_Epic.yml  4_Task.yml  5_Bug.yml
.github/workflows/: refresh-profile.yml
docs/: DR-001.md  repo-overview-tool-design.md
profile/: README.md  metrics.md
profile/cache/: repo_overview.json
scripts/: collect_metrics.py  update_readme.py
src/generate_repo_overview/: README.md  _html_common.py  _html_detail.py  _html_index.py  cli.py  collector.py  constants.py  git_checkout.py  metrics_html.py  metrics_report.py  models.py  profile_readme.py  registry_metadata.py  signal_detection.py
src/generate_repo_overview/collector/: __init__.py  reference_integration.py  repo_entry.py  signal_detection.py  snapshot_io.py
src/generate_repo_overview/templates/: index.js  styles.css
src/profile_readme_generator/: generator.py  profile_readme_config.toml
src/profile_readme_generator/templates/: profile_readme.md
src/s_core_repos_overview/: .contrib_report_iter_commits.py  contrib_report.py  contrib_report.yaml  update_readme.py
tests/: test_cli.py  test_cli_render.py  test_generator.py  test_repo_overview.py
